--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
